//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message Nameinfo {
    string                  Name             = 1 ; //域名
    bytes                   Txid             = 2 ; //交易id
    repeated  bytes         NetIds           = 3 ; //节点地址
    repeated  bytes         AddrCoins        = 4 ; //钱包收款地址
    uint64                  Height           = 5 ; //注册区块高度，通过现有高度计算出有效时间
    uint64                  NameOfValidity   = 6 ; //有效块数量
    uint64                  Deposit          = 7 ; //冻结金额
}
